--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.3",
+    "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
